--- a/index.html
+++ b/index.html
@@ -4,137 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheick Tiemogo</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <div>
-        <div class="haut">
-            <a href="#">Cheick Tiemogo</a>
-            <a href="#">Plugins</a>
-            <a href="#">Contact</a>
+     <div class="container">
+        <div class="banner">
+            <h2>my account</h2>
+            <div>
+                <a href="#">HOME</a>
+                <img src="arrow-right.svg" alt="arrow">
+                <p>MY ACCOUNT</p>
+            </div>
         </div>
-        <header>
-            <h1><a href="#">< Cheick Tiemogo /></a></h1>
-            <nav>
-                <label for="checked"></label>
-                <input type="checkbox" name="checked" id="checked">
-                <ul id="link">
-                    <label class="hover2" for="checked"></label>
-                    <li><a href="#section2">Web design</a></li>
-                    <li><a href="#section2">Magasins en ligne</a></li>
-                    <li><a href="#section2">Application Web</a></li>
-                    <li><a href="#section2">Plate-forme de livraison</a></li>
-                    <li><a href="#section2">Plus</a></li>
-                    <li>
-                        <div class="menu">
-                            <p><a href="" class="hover">< /></a></p>
-                            <ul class="menuli">
-                                <li><a href="#">wordpress</a></li>
-                                <li><a href="#">WooCommerce</a></li>
-                                <li><a href="#">petit code</a></li>
-                                <li><a href="#">CSS</a></li>
-                            </ul>
-                        </div>
-                    </li>
-
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section class="section1">Conseil en services et <br>solutions _ _ _ _ _ _ _ _ _ <br>_ _ _ _ _ _ _ _  _ _ _ _ _ _ _<br> _ _ _ _ _ _ _ _ _ _ Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis temporibus esse eos nostrum odio omnis, iste doloremque adipisci quisquam repellat.</section>
-            <div class="carrer">
-                <p>Javascript</p>
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>Java</p>
-                <p>PHP</p>
-            </div>
-            <section class="section2">
-                <h3>Vous saurez ce que je veux dire <br> quand je parle de</h3>
-                <p>créativité, qualité et engagement.</p>
-                <span>De quel type de service ou de solution votre entreprise a-t-elle besoin ?</span>
-                <div id="section2">
-                    <div class="Webdesign">
-                        <h2>Web design</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsa temporibus accusamus recusandae voluptate. Asperiores dolorem deserunt id nam animi voluptatibus tenetur, non, totam doloremque soluta distinctio numquam nostrum magnam!
-                        </p>
-                    </div>
-                    <div class="Webapp">
-                        <h2>Web APP</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsa temporibus accusamus recusandae voluptate. Asperiores dolorem deserunt id nam animi voluptatibus tenetur, non, totam doloremque soluta distinctio numquam nostrum magnam!
-                        </p>
-                    </div>
-                    <div class="magasins">
-                        <h2>Magasins en ligne</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsa temporibus accusamus recusandae voluptate. Asperiores dolorem deserunt id nam animi voluptatibus tenetur, non, totam doloremque soluta distinctio numquam nostrum magnam!
-                        </p>
-                    </div>
-                    <div class="livraison">
-                        <h2>Plate-forme de livraison</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsa temporibus accusamus recusandae voluptate. Asperiores dolorem deserunt id nam animi voluptatibus tenetur, non, totam doloremque soluta distinctio numquam nostrum magnam!
-                        </p>
-                    </div>
-                    <div class="plus">
-                        <h2>Plus</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsa temporibus accusamus recusandae voluptate. Asperiores dolorem deserunt id nam animi voluptatibus tenetur, non, totam doloremque soluta distinctio numquam nostrum magnam!
-                        </p>
-                    </div>
+        <div class="containts">
+            <h2>connexion</h2>
+            <form>
+                <div class="inputs">
+                    <input type="text" placeholder="identifiant ou e-mail *">
+                    <input type="password" placeholder="Mot de passe *">
                 </div>
-            </section>
-            <section class="section3">
-                <p>
-                    Pojets et collabortions 
-                    <span>
-                        avec des agences
-                    </span> 
-                    dans differents pays
-                </p>
-                <span class="pays">Mexique, Etats-Unis, Argentine et Espagne</span>
-                <span class="skills">WordPress, WooCommerce, Prestashop, Magento, Moodle, Android Studio, Xcode..</span>
-            </section>
-        </main>
-        <footer>
-            <div class="conataint">
-                <p>Avez vous un projet?</p>
-                <div>
-                    <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus delectus,
-                        et tenetur sunt accusamus rerum, quo dolorum iure maiores, blanditiis est 
-                        possimus quis eveniet doloribus explicabo nostrum? Officiis, impedit est!
-                        <br> <a href="#" class="studio">#Cheickteimogostudio</a>
-                        <div class="media">
-                            <p>
-                                Allons nous collaborez?
-                            </p>
-                            <div class="socials">
-                                <a href="#"><img src="phone.svg" alt="phone"></a>
-                                <a href="#"><img src="mail.svg" alt="mail"></a>
-                                <a href="#"><img src="messenger.svg" alt="messenger"></a>
-                                <a href="#"><img src="whatsApp.svg" alt="whatsApp"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bat">
-                        <p>©2020 Daniel Esparza, inspiré par #openliveit #dannydshore</p>
-                        <div class="socials">
-                            <a href="#"><img src="arrow-up.svg" alt="#" class="up"></a>
-                            <div class="p"><a href="#"><img src="phone.svg" alt="phone"></a>
-                                <a href="#"><img src="mail.svg" alt="mail"></a>
-                                <a href="#"><img src="messenger.svg" alt="messenger"></a>
-                                <a href="#"><img src="whatsApp.svg" alt="whatsApp"></a></div>
-                        </div>
-                    </div>
-                </div>
+                <input type="checkbox" id="check">
+                <label for="check">Se souvenir de moi</label>
+                <button type="submit">identification</button>
+            </form>
+        </div>
+     </div>
+     <footer>
+        <div class="contact">
+            <h2>Contact</h2>
+            <div>
+                <a href="#">Zino Rue des Jardins,Abidjan</a>
+                <a href="#">(+225) 27 22 51 05 11</a>
+                <a href="#">acceuil@zino.ci</a>
+                <a href="#">Nous Rejoindre</a>
             </div>
-        </footer>
-    </div>
-
+        </div>
+        <div class="club">
+            <h2>Mon club privilèges</h2>
+            <div>
+                <a href="#">Connaitre les avantages</a>
+                <a href="#">S'inscrire</a>
+                <a href="#">Se connecter</a>
+                <a href="#">FAQ</a>
+            </div>
+        </div>
+        <div class="apropos">
+            <h2>À propos de Zino</h2>
+            <div>
+                <a href="#">L'histoire</a>
+                <a href="#">Les boutiques</a>
+                <a href="#">Les Marques</a>
+                <a href="#">Le Blog</a>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
